@@ -1,3 +1,4 @@
-EBUILD qutim-massmessaging-0.2.9999.ebuild 933 RMD160 ac6d650827139216e98fe280be5472687b9e40bc SHA1 973f17aa43998d6375e4394e517b9094a82ac672 SHA256 9bc8dd95afa85046870e33b5b8e2ee474a75b9edd5b6494c5a285d5c976c37e8
-MISC ChangeLog 292 RMD160 b62f8265409b41064a3dbd73adc132aafa9d7503 SHA1 d02a97dcec2f71aaa20e6c1bba0128c9a4450cd1 SHA256 8be020c467086b3a8e3dcca5edcd284815887ea34f896296ba492f4151132083
+EBUILD qutim-massmessaging-0.2.9999.ebuild 962 RMD160 a41ad55b4e19d8aa4457b5ec36da53d5303ffeff SHA1 955c45ce7109fb0f7df61485871bad13b5399f6f SHA256 35b1f6f81a04b361712ce604568d7b70f206df40720892aff715478a2640a924
+EBUILD qutim-massmessaging-0.3.9999.ebuild 1065 RMD160 1852a936eedf769c2dc346a540f908e2ab7f644a SHA1 62bb493b795e0b74005de81145ff4a4b5ffd4e5e SHA256 c589b0aa09a3b1332490f55a1ae9bbaa10ff328f4196bc5e7fc73e3dd7415095
+MISC ChangeLog 483 RMD160 d06e912ec046c7e29801e2b31fe6572c71eb61f8 SHA1 f61b161317b997f810ef4b40f891c1c0643fb4e5 SHA256 070863700d78b4cf7bd1cecc62b8559c0a49a9e1de6cb67e8a652b0673e4712e
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
